# libgweather

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  ChangeLog.pre-git  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  configure  configure.ac  configure.in  libgweather.doap  meson.build  meson_options.txt
.ci/: check-abi
.gitlab-ci/: gen-coverage.sh  run-style-check.sh  search-common-ancestor.sh
build-aux/meson/: gen_locations_variant.py  meson_post_install.py
data/: Locations.ast.xml  Locations.xml  Locations.xml.in  Makefile.am  README  README.timezones  build-locationdb.pl  check-observations.py  check-timezones.sh  city-fixups.pl  gen-locations-variant.py  gen_locations_variant.py  gweather-3.0-uninstalled.pc.in  locations-flatten.xsl  locations-reorder.xsl  locations-to-country.sh  locations.dtd  locations.its  locations_diff.py  major-cities.txt  meson.build  org.gnome.GWeather.gschema.xml.in  station-fixups.pl  update-locations.py
data/glade/: Makefile.am  libgweather.xml  libgweather.xml.in
data/sources/: README.sources
doc/: Makefile.am  adding-locations.md  libgweather-3.0.types  libgweather-docs.sgml  libgweather-docs.xml  libgweather-sections.txt  libgweather.toml.in  libgweather.types  locations-format.md  meson.build  migrating-3to4.md  time-zones.md  urlmap.js  version.xml.in
doc/tmpl/: gweather-enum-types.sgml  gweather-gconf.sgml  gweather-location.sgml  gweather-prefs.sgml  gweather-timezone.sgml  gweather-xml.sgml  libgweather-unused.sgml  location-entry.sgml  parser.sgml  timezone-menu.sgml  weather-priv.sgml  weather.sgml
icons/: Makefile.am  moonshadow.pl
libgweather/: AUTHORS  ChangeLog  ChangeLog.pre-2-22  GWeather-4.0.metadata  Makefile.am  gweather-3.0-uninstalled.pc.in  gweather-3.0.pc.in  gweather-db.h  gweather-enum-types.c.tmpl  gweather-enum-types.h.tmpl  gweather-enums.h  gweather-gconf.c  gweather-gconf.h  gweather-info.c  gweather-info.h  gweather-location-entry.c  gweather-location-entry.h  gweather-location.c  gweather-location.h  gweather-parser.c  gweather-parser.h  gweather-prefs.c  gweather-prefs.h  gweather-private.c  gweather-private.h  gweather-search-indexer.c  gweather-search.c  gweather-search.h  gweather-timezone-menu.c  gweather-timezone-menu.h  gweather-timezone.c  gweather-timezone.h  gweather-uninstalled.pc.in  gweather-version.h.in  gweather-weather.c  gweather-weather.h  gweather-win32.c  gweather-win32.h  gweather-xml.c  gweather-xml.h  (+37 more)
libgweather/tests/: duplicates.c  gweather-test-utils.c  gweather-test-utils.h  meson.build  metar.c  test_libgweather.c  timezones.c
libgweather/tools/: meson.build  test_locations.c  test_locations_utc.c  test_metar.c  test_search.c  test_sun_moon.c  test_weather.c
po/: ChangeLog  ChangeLog.pre-git  LINGUAS  POTFILES.in  POTFILES.skip  ab.po  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  (+81 more)
po-locations/: ChangeLog  LINGUAS  Makefile.am  POTFILES.in  POTFILES.skip  README.translators  ab.po  ang.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  extract.xsl  fa.po  fi.po  fr.po  fur.po  (+63 more)
python/: Makefile.am  bad__init__.py  demo.py  gweather.defs  gweather.override  gweathermodule.c
schemas/: Makefile.am  meson.build  org.gnome.GWeather.gschema.xml  org.gnome.GWeather.gschema.xml.in  org.gnome.GWeather4.gschema.xml
trunk/: Makefile.am  autogen.sh
trunk/data/: Makefile.am  locations_diff.py
trunk/libgweather/: ChangeLog  README  gweather-prefs.c  gweather.pc.in  gweather.schemas.in  weather-iwin.c  weather-met.c  weather-metar.c  weather-sun.c  weather.c  weather.h
trunk/po/: ChangeLog  POTFILES.in  POTFILES.skip  am.po  ar.po  bn.po  bs.po  ca.po  cy.po  de.po  dz.po  en_CA.po  en_GB.po  es.po  es_CL.po  es_EC.po  es_GT.po  es_PR.po  eu.po  fa.po  ga.po  gl.po  gu.po  hi.po  hu.po  hy.po  lt.po  mg.po  ml.po  mr.po  nb.po  nn.po  oc.po  pt.po  pt_BR.po  ru.po  si.po  sk.po  sq.po  ta.po  (+5 more)
trunk/po-locations/: ar.po  as.po  bn.po  cy.po  de.po  en_CA.po  en_GB.po  et.po  eu.po  fa.po  ga.po  gu.po  he.po  hi.po  hu.po  ja.po  ml.po  mn.po  nb.po  ne.po  nn.po  oc.po  or.po  pl.po  ro.po  ru.po  si.po  sq.po  sr.po  sv.po  ta.po  te.po  tr.po  vi.po  zh_TW.po
